--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -357,7 +357,7 @@ ggplot(data = vizDataFrame, aes(topic, value, fill = topic_max), ylab = "proport
   geom_bar(stat="identity") +
   theme(axis.text.x = element_text(angle = 90, hjust = 1)) +  
   coord_flip() +
-  facet_wrap(~ document, ncol = 10) +
+  facet_wrap(~ as.numeric(document), ncol = 10) +
   theme(legend.position = "bottom") +
   scale_fill_viridis_d(name = "Topic") +
   labs(title = "Theses as distributions over topics",
