Add new references in paper

--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -99,3 +99,63 @@
 	url = {https://doi.org/10.18637/jss.v040.i13},
 	langid = {en}
 }
+
+@article{wallach2018,
+	title = {Computational social science ≠ computer science + social data},
+	author = {Wallach, Hanna},
+	year = {2018},
+	month = {02},
+	date = {2018-02-21},
+	journal = {Communications of the ACM},
+	pages = {42{\textendash}44},
+	volume = {61},
+	number = {3},
+	doi = {10.1145/3132698},
+	url = {https://dl.acm.org/doi/10.1145/3132698}
+}
+
+@article{blei2012,
+	title = {Probabilistic topic models},
+	author = {Blei, David M.},
+	year = {2012},
+	month = {04},
+	date = {2012-04-01},
+	journal = {Communications of the ACM},
+	pages = {77{\textendash}84},
+	volume = {55},
+	number = {4},
+	doi = {10.1145/2133806.2133826},
+	url = {https://doi.org/10.1145/2133806.2133826}
+}
+
+@article{rüdiger2022,
+	title = {Topic modeling revisited: New evidence on algorithm performance and quality metrics},
+	author = {{Rüdiger}, Matthias and Antons, David and Joshi, Amol M. and Salge, Torsten-Oliver},
+	year = {2022},
+	month = {04},
+	date = {2022-04-28},
+	journal = {PLOS ONE},
+	pages = {e0266325},
+	volume = {17},
+	number = {4},
+	doi = {10.1371/journal.pone.0266325},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0266325},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
+
+@article{rüdiger2022a,
+	title = {Topic modeling revisited: New evidence on algorithm performance and quality metrics},
+	author = {{Rüdiger}, Matthias and Antons, David and Joshi, Amol M. and Salge, Torsten-Oliver},
+	year = {2022},
+	month = {04},
+	date = {2022-04-28},
+	journal = {PLOS ONE},
+	pages = {e0266325},
+	volume = {17},
+	number = {4},
+	doi = {10.1371/journal.pone.0266325},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0266325},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
